[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Items/Items.gd" type="Script" id=1]
[ext_resource path="res://Resources/Spriteframes/item_spriteframes.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Items" type="Node2D"]
script = ExtResource( 1 )

[node name="Slot1" type="Area2D" parent="."]
position = Vector2( 15, 0 )
collision_layer = 4
collision_mask = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="Slot1"]
scale = Vector2( 4, 4 )
frames = ExtResource( 2 )
animation = "no_item"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot1"]
scale = Vector2( 1, 1.5 )
shape = SubResource( 1 )

[node name="Slot2" type="Area2D" parent="."]
position = Vector2( 40, 0 )
collision_layer = 4
collision_mask = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="Slot2"]
scale = Vector2( 4, 4 )
frames = ExtResource( 2 )
animation = "no_item"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot2"]
scale = Vector2( 1, 1.5 )
shape = SubResource( 1 )

[node name="Slot3" type="Area2D" parent="."]
position = Vector2( 65, 0 )
collision_layer = 4
collision_mask = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="Slot3"]
scale = Vector2( 4, 4 )
frames = ExtResource( 2 )
animation = "no_item"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot3"]
scale = Vector2( 1, 1.5 )
shape = SubResource( 1 )

[connection signal="input_event" from="Slot1" to="." method="_on_item_click_input_event" binds= [ "Slot1" ]]
[connection signal="input_event" from="Slot2" to="." method="_on_item_click_input_event" binds= [ "Slot2" ]]
[connection signal="input_event" from="Slot3" to="." method="_on_item_click_input_event" binds= [ "Slot3" ]]
